@@ -52,6 +52,9 @@ static char rcsId[] = "$Id$";
 
 static const char *pw_attributes[] =
 {AT (uid), AT (userPassword),
+#ifdef AUTHPASSWORD
+ AT (authPassword),
+#endif /* AUTHPASSWORD */
  AT (uidNumber), AT (gidNumber),
  AT (cn), AT (homeDirectory),
  AT (loginShell), AT (gecos),
@@ -60,6 +63,9 @@ static const char *pw_attributes[] =
  
 static const char *sp_attributes[] =
 {AT (uid), AT (userPassword),
+#ifdef AUTHPASSWORD
+ AT (authPassword),
+#endif /* AUTHPASSWORD */
  AT (shadowLastChange), AT (shadowMax),
  AT (shadowMin), AT (shadowWarning),
  AT (shadowInactive), AT (shadowExpire),
@@ -67,6 +73,9 @@ static const char *sp_attributes[] =
 
 static const char *gr_attributes[] =
 {AT (cn), AT (userPassword),
+#ifdef AUTHPASSWORD
+ AT (authPassword),
+#endif /* AUTHPASSWORD */
  AT (memberUid),
 #ifdef RFC2307BIS
 #ifdef NDS
